--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,10 +17,12 @@
         <listener class="com.github.felixhaller.issuebranchcreator.listeners.MyProjectManagerListener"
                   topic="com.intellij.openapi.project.ProjectManagerListener"/>
     </projectListeners>
+
     <actions>
         <action id="com.github.felixhaller.issuebranchcreator.PopupDialogAction"
                 class="com.github.felixhaller.issuebranchcreator.PopupDialogAction" text="Create a Branch by Issue Id">
             <add-to-group group-id="GitRepositoryActions" anchor="first"/>
+            <keyboard-shortcut first-keystroke="control G" second-keystroke="C" keymap="$default"/>
         </action>
     </actions>
 </idea-plugin>
