--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,7 +8,7 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.felixhaller.issuebranchcreator.settings.ProjectSettingsState"/>
+        <projectService serviceImplementation="com.github.felixhaller.issuebranchcreator.settings.ProjectSettingsState"/>
 
         <projectConfigurable parentId="tools"
                              instance="com.github.felixhaller.issuebranchcreator.settings.ProjectSettingsConfigurable"
