--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ pluginVersion=0.0.1
 pluginSinceBuild = 193
 pluginUntilBuild = 201.*
 
-platformType = IC
-platformVersion = 2019.3
-platformDownloadSources = true
+platformType=IC
+platformVersion=2020.1
+platformDownloadSources=true
