--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,10 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://www.jetbrains.org/intellij/sdk/docs/reference_guide/intellij_artifacts.html
-
 pluginGroup=com.github.felixhaller.issuebranchcreator
-pluginName=Issue-Branch-Creator
+pluginName=Issue Branch Creator
 pluginVersion=0.0.3
-pluginSinceBuild = 193
-pluginUntilBuild = 203.*
-
+pluginSinceBuild=201
+pluginUntilBuild=203.*
 platformType=IC
-platformVersion=2020.1
+platformVersion=2020.3
 platformDownloadSources=true
