--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@
 ## JBIJPPTPL
 
 name: Build
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
 
@@ -160,8 +160,8 @@ jobs:
   # If accepted and published, release workflow would be triggered
   releaseDraft:
     name: Release Draft
-    if: github.ref == 'refs/heads/master'
-    needs: [build, verify]
+    if: startsWith(github.ref, 'refs/tags')
+    needs: [ build, verify ]
     runs-on: ubuntu-latest
     steps:
 
