--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -187,8 +187,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ needs.build.outputs.version }}
-          release_name: v${{ needs.build.outputs.version }}
+          tag_name: ${{ needs.build.outputs.version }}
+          release_name: ${{ needs.build.outputs.version }}
           body: ${{ needs.build.outputs.changelog }}
           draft: true
 
